Fix reuse author display on Firefox (fix #1)

--- a/less/etalab-dataset.less
+++ b/less/etalab-dataset.less
@@ -356,7 +356,7 @@ aside {
                     position: relative;
                 }
                 .date {
-                    float: left;
+                    display: block;
                     font-size: 10px;
                     top: -5px;
                     position: relative;
